--- a/app/src/main/res/layout/activity_business__botigues.xml
+++ b/app/src/main/res/layout/activity_business__botigues.xml
@@ -9,7 +9,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/fonsbusiness"/>
+        android:scaleType="fitXY"
+        android:src="@drawable/fonsbotigues"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,171 +18,251 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
+
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/Back"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/back"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"/>
 
-                android:id="@+id/Back"/>
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/TitolBotigues"
-                android:text="BOTIGUES"
-                android:layout_toRightOf="@+id/Back"
-                android:layout_marginTop="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
+                android:layout_marginTop="8dp"
+                android:layout_toRightOf="@+id/Back"
+                android:text="BOTIGUES"
+                android:textSize="30dp" />
 
-                android:textSize="30dp"/>
             <ImageView
-                android:layout_below="@+id/Back"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
                 android:id="@+id/ImgBotiga1"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="20dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/LinkPrimeraBotiga"
-                android:text="Barbany Granollers"
-
-                android:layout_marginBottom="30dp"
-                android:layout_alignBottom="@+id/ImgBotiga1"
-                android:layout_toRightOf="@+id/ImgBotiga1"
-                android:layout_toEndOf="@+id/ImgBotiga1"
-                android:layout_marginLeft="28dp"
-                android:layout_marginStart="28dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/TlfBotiga1"
-                android:text="93-879-28-16"
-
-                android:layout_toRightOf="@+id/LinkPrimeraBotiga"
-                android:layout_alignBottom="@+id/LinkPrimeraBotiga"
-
-                android:layout_marginLeft="20dp"
-                />
-            <ImageView
-                android:layout_below="@+id/ImgBotiga1"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:id="@+id/ImgBotiga2"
-                android:layout_marginTop="10dp"
+                android:layout_below="@+id/Back"
                 android:layout_marginLeft="20dp"
-                />
+                android:layout_marginTop="20dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/barbany" />
             <TextView
+                android:id="@+id/NomBotiga1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Barbany"
+                android:layout_below="@id/ImgBotiga1"
+                android:layout_alignLeft="@id/ImgBotiga1"/>
+
+            <ImageView
+                android:id="@+id/LinkPrimeraBotiga"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/ImgBotiga1"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="28dp"
+                android:layout_toRightOf="@+id/ImgBotiga1"
+                android:src="@drawable/webico"/>
+
+            <ImageView
+                android:id="@+id/TlfBotiga1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/LinkPrimeraBotiga"
+                android:layout_marginLeft="20dp"
+                android:layout_toRightOf="@+id/LinkPrimeraBotiga"
+                android:src="@drawable/tlfico"/>
+            <ImageView
+                android:id="@+id/bubi1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_alignBottom="@id/TlfBotiga1"
+                android:layout_toRightOf="@id/TlfBotiga1"
+                android:src="@drawable/icoubi"/>
+
+            <ImageView
+                android:id="@+id/ImgBotiga2"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_below="@+id/NomBotiga1"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/elmon" />
+            <TextView
+                android:id="@+id/NomBotiga2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="El Mon"
+                android:layout_below="@id/ImgBotiga2"
+                android:layout_alignLeft="@id/ImgBotiga2"/>
+
+            <ImageView
                 android:id="@+id/LinkSegonaBotiga"
-                android:text="El Món"
-
-                android:layout_marginBottom="30dp"
-                android:layout_above="@+id/ImgBotiga3"
-                android:layout_alignLeft="@+id/LinkPrimeraBotiga"
-                android:layout_alignStart="@+id/LinkPrimeraBotiga" />
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/TlfBotiga2"
-                android:text="93-860-64-61"
+                android:layout_alignBottom="@+id/ImgBotiga2"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="28dp"
+                android:layout_toRightOf="@+id/ImgBotiga2"
+                android:src="@drawable/webico"/>
 
+            <ImageView
+                android:id="@+id/TlfBotiga2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/LinkSegonaBotiga"
+
                 android:layout_alignBottom="@+id/LinkSegonaBotiga"
                 android:layout_alignLeft="@+id/TlfBotiga1"
-                android:layout_alignStart="@+id/TlfBotiga1" />
+                android:layout_alignStart="@+id/TlfBotiga1"
+                android:src="@drawable/tlfico" />
             <ImageView
-                android:layout_below="@+id/ImgBotiga2"
+                android:id="@+id/bubi2"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_alignBottom="@id/TlfBotiga2"
+                android:layout_toRightOf="@id/TlfBotiga2"
+                android:src="@drawable/icoubi"/>
+
+            <ImageView
+                android:id="@+id/ImgBotiga3"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:id="@+id/ImgBotiga3"
-                android:layout_marginTop="20dp"
+                android:layout_below="@+id/NomBotiga2"
                 android:layout_marginLeft="20dp"
-                />
+                android:layout_marginTop="20dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/laperla" />
             <TextView
+                android:id="@+id/NomBotiga3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="La Perla"
+                android:layout_below="@id/ImgBotiga3"
+                android:layout_alignLeft="@id/ImgBotiga3"/>
+
+            <ImageView
                 android:id="@+id/LinkTerceraBotiga"
-                android:text="Botiga La Perla"
-
-                android:layout_marginBottom="30dp"
-                android:layout_alignBottom="@+id/ImgBotiga3"
-                android:layout_toRightOf="@+id/ImgBotiga3"
-                android:layout_toEndOf="@+id/ImgBotiga3"
-                android:layout_marginLeft="28dp"
-                android:layout_marginStart="28dp" />
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/TlfBotiga3"
-                android:text="93-879-63-65"
+                android:layout_alignBottom="@+id/ImgBotiga3"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="28dp"
+                android:layout_toRightOf="@+id/ImgBotiga3"
+                android:src="@drawable/webico"/>
 
+            <ImageView
+                android:id="@+id/TlfBotiga3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/LinkTerceraBotiga"
+
                 android:layout_alignBottom="@+id/LinkTerceraBotiga"
                 android:layout_alignLeft="@+id/TlfBotiga2"
-                android:layout_alignStart="@+id/TlfBotiga2" />
+                android:layout_alignStart="@+id/TlfBotiga2"
+                android:src="@drawable/tlfico" />
             <ImageView
-                android:layout_below="@+id/ImgBotiga3"
+                android:id="@+id/bubi3"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_alignBottom="@id/TlfBotiga3"
+                android:layout_toRightOf="@id/TlfBotiga3"
+                android:src="@drawable/icoubi"/>
+
+            <ImageView
+                android:id="@+id/ImgBotiga4"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:id="@+id/ImgBotiga4"
-                android:layout_marginTop="10dp"
+                android:layout_below="@+id/NomBotiga3"
                 android:layout_marginLeft="20dp"
-                />
+                android:layout_marginTop="10dp"
+                android:src="@drawable/intecat" />
             <TextView
+                android:id="@+id/NomBotiga4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/LinkQuartaBotiga"
                 android:text="INTEcat"
+                android:layout_below="@id/ImgBotiga4"
+                android:layout_alignLeft="@id/ImgBotiga4"/>
 
-                android:layout_marginBottom="30dp"
-                android:layout_alignBottom="@+id/ImgBotiga4"
-                android:layout_toRightOf="@+id/ImgBotiga4"
-                android:layout_toEndOf="@+id/ImgBotiga4"
-                android:layout_marginLeft="28dp"
-                android:layout_marginStart="28dp" />
-            <TextView
+            <ImageView
+                android:id="@+id/LinkQuartaBotiga"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/TlfBotiga4"
-                android:text="93-159-54-23"
+                android:layout_alignBottom="@+id/ImgBotiga4"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="28dp"
+                android:layout_toRightOf="@+id/ImgBotiga4"
+                android:src="@drawable/webico"/>
 
+            <ImageView
+                android:id="@+id/TlfBotiga4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/LinkQuartaBotiga"
+
                 android:layout_alignBottom="@+id/LinkQuartaBotiga"
                 android:layout_alignLeft="@+id/TlfBotiga3"
-                android:layout_alignStart="@+id/TlfBotiga3" />
+                android:layout_alignStart="@+id/TlfBotiga3"
+                android:src="@drawable/tlfico" />
+
             <ImageView
-                android:layout_below="@+id/ImgBotiga4"
+                android:id="@+id/ImgBotiga5"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:id="@+id/ImgBotiga5"
-                android:layout_marginTop="20dp"
+                android:layout_below="@+id/NomBotiga4"
                 android:layout_marginLeft="20dp"
-                />
+                android:layout_marginTop="20dp"
+                android:src="@drawable/mqm" />
+            <ImageView
+                android:id="@+id/bubi4"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_alignBottom="@id/TlfBotiga4"
+                android:layout_toRightOf="@id/TlfBotiga4"
+                android:src="@drawable/icoubi"/>
             <TextView
+                android:id="@+id/NomBotiga5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Mes que mascotes"
+                android:layout_below="@id/ImgBotiga5"
+                android:layout_alignLeft="@id/ImgBotiga5"/>
+
+            <ImageView
                 android:id="@+id/LinkCinquenaBotiga"
-                android:text="Més que Mascotes"
-
-                android:layout_marginBottom="30dp"
-                android:layout_alignBottom="@+id/ImgBotiga5"
-                android:layout_toRightOf="@+id/ImgBotiga5"
-                android:layout_toEndOf="@+id/ImgBotiga5"
-                android:layout_marginLeft="28dp"
-                android:layout_marginStart="28dp" />
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/TlfBotiga5"
-                android:text="93-849-21-86"
+                android:layout_alignBottom="@+id/ImgBotiga5"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="28dp"
+                android:layout_toRightOf="@+id/ImgBotiga5"
+                android:src="@drawable/webico"/>
 
+            <ImageView
+                android:id="@+id/TlfBotiga5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/LinkCinquenaBotiga"
+
                 android:layout_alignBottom="@+id/LinkCinquenaBotiga"
                 android:layout_alignLeft="@+id/TlfBotiga4"
-                android:layout_alignStart="@+id/TlfBotiga4" />
+                android:layout_alignStart="@+id/TlfBotiga4"
+                android:src="@drawable/tlfico" />
+            <ImageView
+                android:id="@+id/bubi5"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_alignBottom="@id/TlfBotiga5"
+                android:layout_toRightOf="@id/TlfBotiga5"
+                android:src="@drawable/icoubi"/>
         </RelativeLayout>
     </ScrollView>
 </FrameLayout>
